# Copyright: (C) 2016 iCub Facility - Istituto Italiano di Tecnologia
# Authors: Ugo Pattacini <ugo.pattacini@iit.it>
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 3.0)

# set the project name
project(TestTutorialRFModule)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
set(CMAKE_SHARED_MODULE_PREFIX "")

# add the required cmake packages
find_package(RTF 1.3  REQUIRED
                      COMPONENTS DLL)
find_package(YARP 3.0 REQUIRED
                      COMPONENTS OS conf sig math dev rtf)

# add include directories
include_directories(${CMAKE_SOURCE_DIR})

# add the source codes to build the plugin library
add_library(${PROJECT_NAME} MODULE test.cpp)

# import math symbols from standard cmath
target_compile_definitions(${PROJECT_NAME} PRIVATE _USE_MATH_DEFINES)

# add required libraries
target_link_libraries(${PROJECT_NAME} ${RTF_LIBRARIES} ${YARP_LIBRARIES})
